--- a/src/shared/ItemDialog.css
+++ b/src/shared/ItemDialog.css
@@ -21,6 +21,8 @@ input {
     position: fixed;
     inset: 0;
     animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+    z-index: 5;
+
 }
 
 .DialogContent {
@@ -36,6 +38,8 @@ input {
   max-height: 85vh;
   padding: 25px;
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+  z-index: 6;
+
 }
 .DialogContent:focus {
   outline: none;
